# DataStructuresithPython

./: .gitignore  README.md  pyproject.toml
notebooks/chapter10/: sorting_algortihms.ipynb
notebooks/chapter11/: randomized_search.ipynb
notebooks/chapter12/: brute_force.ipynb
notebooks/chapter2/: collections.ipynb  dictionaries.ipynb  sets.ipynb
notebooks/chapter3/: karatsuba_multiplication.ipynb  merge_sort.ipynb  recursive_examples.ipynb
notebooks/chapter4/: circularly_linked_list.ipynb  doubly_linked_lists.ipynb  node_classes.ipynb
notebooks/chapter5/: stacks_and_queues.ipynb
notebooks/chapter6/: introduction.ipynb
notebooks/chapter7/: hashing.ipynb
notebooks/chapter8/: graphs.ipynb
notebooks/chapter9/: search_algorithms.ipynb
src/chapter1/: generators_and_coroutines.py
