[tool.poetry]
name = "datastructuresithpython"
version = "0.1.0"
description = ""
authors = ["Kemal Diri <kemaldiri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
black = "^20.8b1"
ipykernel = "^5.3.4"
matplotlib = "^3.3.1"
nbformat = "^5.0.7"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
